# sec-holdings

./: .env  .gitattributes  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml
data/: sec_holdings.db
overlays/: example_pershing.yaml
src/sec_holdings/: __init__.py  config.py  database.py  derivatives.py  fetcher.py  main.py  prices.py
src/sec_holdings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_database.py  test_derivatives.py  test_fetcher.py  test_prices.py
tests/fixtures/: example_overlay.yaml
